--- a/src/components/navbar/navlinks/navlinks.css
+++ b/src/components/navbar/navlinks/navlinks.css
@@ -10,6 +10,10 @@
     .underline {
       display: none;
     }
+
+    &:hover {
+      color: var(--hg-orange);
+    }
   }
 
   a.active {
