--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,7 @@ body::after {
   );
   pointer-events: none;
   z-index: 9999;
+  scroll-behavior: smooth;
 }
 
 .light {
@@ -150,10 +151,6 @@ a {
   transition: color 0.5s ease;
 }
 
-a:hover {
-  color: var(--color-primary);
-}
-
 h1,
 h2,
 h3,
@@ -184,20 +181,12 @@ span {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--color-primary);
+  background-color: var(--hg-orange);
   border-radius: var(--border-radius-1);
 }
 
 ::-webkit-scrollbar-track {
   background-color: var(--color-secondary);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--cute-oranage);
-}
-
-::-webkit-scrollbar-thumb:active {
-  background-color: var(--cute-green);
 }
 
 @media (min-width: 320px) {
