--- a/src/pages/home/readme/readme.css
+++ b/src/pages/home/readme/readme.css
@@ -31,5 +31,11 @@
     flex-direction: column;
     align-items: start;
     gap: 20px;
+
+    a {
+      &:hover {
+        color: var(--hg-orange);
+      }
+    }
   }
 }
